--- a/src/App.css
+++ b/src/App.css
@@ -9,15 +9,18 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    /* animation: App-logo-spin infinite 20s linear; */
+    border-radius: 10px;
+    box-shadow: 0px 20px 40px -8px #852434, 0px 1px 1px #000000
   }
 }
 
 .App-header {
-  background-color: #282c34;
+  background: linear-gradient(
+      #B76E79,
+      #D5ABB2);
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  /* display: block; */
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -25,14 +28,25 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: pink;
 }
+
+div {
+  font-weight: bold;
+  position: relative;
+}
+
+#img1 {animation-timing-function: ease-in;}
+
 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(-10deg,10deg);
   }
 }
+
+
+
